[package]
name = "jmx-weights"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.24"
anyhow = "1.0.98"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
google-sheets4 = "6.0.0"
mpl-token-metadata = "5.1.0"
op-alloy-network = "0.18.14"
serde_json = "1.0.142"
solana-client = "2.3.7"
solana-sdk = "2.3.1"
spl-token-2022 = "8.0.1"
spl-token-metadata-interface = "0.8.0"
tokio = {version = "1.47.1", features = ["rt-multi-thread"]}
